--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "port-tester",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "checkPort.js",
   "dependencies": {
     "netlify-lambda": "^2.0.0"
   },
